<resources>
    <string name="app_name">My Financial Tracker</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">login</string>
    <string name="do_not_have_an_account_click_here_to_register_now">Do not have an account ? Click here to register now</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">register</string>
    <string name="home">Home (Note expense)</string>
    <string name="expenditure_history">Expenditure History</string>
    <string name="exchange_rates">Exchange Rates</string>
    <string name="finance">Finance</string>
    <string name="purpose">Purpose</string>
    <string name="payee">Payee</string>
    <string name="amount">Amount</string>
    <string name="add_expense">add expense</string>
    <string name="you_have">You have</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="convert">convert</string>
    <string name="value">Value</string>
    <string name="in_bank">In Bank</string>
    <string name="source">Source</string>
    <string name="add_to_current_balance">Add to current balance</string>
    <string name="in_hand">In Hand</string>
    <string name="amount_withdrawn_from_bank">Amount withdrawn from bank</string>
    <string name="amount_added_to_digital_wallet">Amount added to digital wallet</string>
    <string name="update_balance_in_hand">update balance in hand</string>
    <string name="in_total">In Total</string>
    <string name="amount_received_from_other_source">Amount received from other source</string>
    <string name="C_date">Date : $d</string>
    <string name="C_mode_of_payment">Mode of Payment :</string>
    <string name="C_payee">Payee :</string>
    <string name="C_purpose">Purpose :</string>
    <string name="C_amount_spent">Amount spent :</string>
    <string name="setup">Setup</string>
    <string name="other">Other</string>
    <string name="setup_fragment">Setup Fragment</string>
    <string name="cash_in_wallet">Cash in wallet</string>
    <string name="bank_balance">Bank balance</string>
    <string name="credit_card_expenditure">Credit card expenditure</string>
    <string name="amount_in_digital_wallet">Amount in digital wallet</string>
    <string name="update">update</string>
    <string name="received_via">Received via</string>
    <string name="amount_received">Amount received :</string>
    <string name="source_from">Source / From</string>
    <string name="note_eg_from_whom_and_for_what">Note (eg: from whom and for what)</string>
    <string name="filter_by">Filter By :</string>
    <string name="select_month">Select Month</string>
    <string name="sort_by">Sort By :</string>
    <string name="record_of_whole_month">Show records of whole month</string>
    <string name="record_of_exact_date">Show records of exact date</string>
    <string name="statistics">Statistics</string>

    <string-array name="array_currency_codes">
        <item>AED</item>
        <item>AFN</item>
        <item>ALL</item>
        <item>AMD</item>
        <item>ANG</item>
        <item>AOA</item>
        <item>ARS</item>
        <item>AUD</item>
        <item>AWG</item>
        <item>AZN</item>
        <item>BAM</item>
        <item>BBD</item>
        <item>BDT</item>
        <item>BGN</item>
        <item>BHD</item>
        <item>BIF</item>
        <item>BMD</item>
        <item>BND</item>
        <item>BOB</item>
        <item>BOV</item>
        <item>BRL</item>
        <item>BSD</item>
        <item>BTN</item>
        <item>BWP</item>
        <item>BYR</item>
        <item>BZD</item>
        <item>CAD</item>
        <item>CDF</item>
        <item>CHE</item>
        <item>CHF</item>
        <item>CHW</item>
        <item>CLF</item>
        <item>CLP</item>
        <item>CNY</item>
        <item>COP</item>
        <item>COU</item>
        <item>CRC</item>
        <item>CUC</item>
        <item>CUP</item>
        <item>CVE</item>
        <item>CZK</item>
        <item>DJF</item>
        <item>DKK</item>
        <item>DOP</item>
        <item>DZD</item>
        <item>EGP</item>
        <item>ERN</item>
        <item>ETB</item>
        <item>EUR</item>
        <item>FJD</item>
        <item>FKP</item>
        <item>GBP</item>
        <item>GEL</item>
        <item>GHS</item>
        <item>GIP</item>
        <item>GMD</item>
        <item>GNF</item>
        <item>GTQ</item>
        <item>GYD</item>
        <item>HKD</item>
        <item>HNL</item>
        <item>HRK</item>
        <item>HTG</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>IQD</item>
        <item>IRR</item>
        <item>ISK</item>
        <item>JMD</item>
        <item>JOD</item>
        <item>JPY</item>
        <item>KES</item>
        <item>KGS</item>
        <item>KHR</item>
        <item>KMF</item>
        <item>KPW</item>
        <item>KRW</item>
        <item>KWD</item>
        <item>KYD</item>
        <item>KZT</item>
        <item>LAK</item>
        <item>LBP</item>
        <item>LKR</item>
        <item>LRD</item>
        <item>LSL</item>
        <item>LYD</item>
        <item>MAD</item>
        <item>MDL</item>
        <item>MGA</item>
        <item>MKD</item>
        <item>MMK</item>
        <item>MNT</item>
        <item>MOP</item>
        <item>MRO</item>
        <item>MUR</item>
        <item>MVR</item>
        <item>MWK</item>
        <item>MXN</item>
        <item>MXV</item>
        <item>MYR</item>
        <item>MZN</item>
        <item>NAD</item>
        <item>NGN</item>
        <item>NIO</item>
        <item>NOK</item>
        <item>NPR</item>
        <item>NZD</item>
        <item>OMR</item>
        <item>PAB</item>
        <item>PEN</item>
        <item>PGK</item>
        <item>PHP</item>
        <item>PKR</item>
        <item>PLN</item>
        <item>PYG</item>
        <item>QAR</item>
        <item>RON</item>
        <item>RSD</item>
        <item>RUB</item>
        <item>RWF</item>
        <item>SAR</item>
        <item>SBD</item>
        <item>SCR</item>
        <item>SDG</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>SHP</item>
        <item>SLL</item>
        <item>SOS</item>
        <item>SRD</item>
        <item>SSP</item>
        <item>STD</item>
        <item>SVC</item>
        <item>SYP</item>
        <item>SZL</item>
        <item>THB</item>
        <item>TJS</item>
        <item>TMT</item>
        <item>TND</item>
        <item>TOP</item>
        <item>TRY</item>
        <item>TTD</item>
        <item>TWD</item>
        <item>TZS</item>
        <item>UAH</item>
        <item>UGX</item>
        <item>USD</item>
        <item>USN</item>
        <item>UYI</item>
        <item>UYU</item>
        <item>UZS</item>
        <item>VEF</item>
        <item>VND</item>
        <item>VUV</item>
        <item>WST</item>
        <item>XAF</item>
        <item>XAG</item>
        <item>XAU</item>
        <item>XBA</item>
        <item>XBB</item>
        <item>XBC</item>
        <item>XBD</item>
        <item>XCD</item>
        <item>XDR</item>
        <item>XOF</item>
        <item>XPD</item>
        <item>XPF</item>
        <item>XPT</item>
        <item>XSU</item>
        <item>XTS</item>
        <item>XUA</item>
        <item>XXX</item>
        <item>YER</item>
        <item>ZAR</item>
        <item>ZMW</item>
        <item>ZWL</item>
    </string-array>

</resources>