<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:icon="@drawable/home_icon"
            android:id="@+id/nav_home"
            android:title="@string/home"/>
    </group>

    <item
        android:title="Records / History">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_expenditure_history"
                    android:icon="@drawable/expenditure_history_icon"
                    android:title="@string/expenditure_history"/>

                <item
                    android:id="@+id/nav_income_history"
                    android:icon="@drawable/income_history_icon"
                    android:title="Income History"/>
            </group>
        </menu>
    </item>

    <item
        android:title="Your data">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_finance"
                    android:icon="@drawable/finance_icon"
                    android:title="@string/finance"/>

                <item
                    android:id="@+id/nav_statistics"
                    android:icon="@drawable/statistics_icon"
                    android:title="@string/statistics"/>
            </group>
        </menu>
    </item>

    <item
        android:title="@string/other">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_exchange_rate"
                    android:icon="@drawable/conversion_icon"
                    android:title="@string/exchange_rates"/>
                <item
                    android:icon="@drawable/setup"
                    android:id="@+id/nav_setup"
                    android:title="@string/setup"/>
            </group>
        </menu>
    </item>

    <item
        android:title="Account">
        <menu>
            <item
                android:icon="@drawable/logout"
                android:id="@+id/nav_logout"
                android:title="Logout"/>
        </menu>
    </item>



</menu>