<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#D4FAC7"
        app:cardCornerRadius="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/custom_tv_income_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="Date : "
                android:textColor="#3D40D6" />

            <TextView
                android:id="@+id/custom_tv_mode_of_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/received_via"
                android:textColor="#6A00FF" />

            <TextView
                android:id="@+id/custom_tv_source_of_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/source"
                android:textColor="#000000" />


            <TextView
                android:id="@+id/custom_tv_income_received"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/amount_received"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>