<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="lViewModel"
            type="exchangerates.ExchangeRateViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="exchangerates.ExchangeRateFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="105dp"
                android:layout_height="55dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                app:layout_constraintEnd_toStartOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/imageView5">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/et_from_currency"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adapter="@{lViewModel.currencyAdapter}"
                    android:gravity="center"
                    android:hint="@string/from"
                    android:inputType="textAutoComplete"
                    android:text="@={lViewModel.fromCurrency}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout5"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="105dp"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/imageView5">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/et_to_currency"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adapter="@{lViewModel.currencyAdapter}"
                    android:gravity="center"
                    android:hint="@string/to"
                    android:inputType="textAutoComplete"
                    android:text="@={lViewModel.toCurrency}" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="165dp"
                android:layout_height="126dp"
                android:layout_marginTop="100dp"
                android:contentDescription="TODO"
                android:src="@drawable/conversion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/exchange_rates"
                android:textColor="#000000"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="36dp"
                android:layout_height="27dp"
                android:layout_marginTop="60dp"
                android:contentDescription="TODO"
                android:onClick="@{()->lViewModel.swap()}"
                android:src="@drawable/swap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="@{()->lViewModel.validate()}"
                android:text="@string/convert"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout6"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout6"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout5"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
                app:layout_constraintTop_toBottomOf="@+id/imageView5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_value_currency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/value"
                    android:text="@={lViewModel.value}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@{lViewModel.result}"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/button2"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="@+id/button2"
                app:layout_constraintTop_toBottomOf="@+id/button2" />

            <ProgressBar
                android:id="@+id/exchangeRatesProgressBar"
                style="?android:attr/progressBarStyle"
                android:visibility="@{lViewModel.pBarVisibility?View.VISIBLE:View.GONE}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_result"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>
